# VM-compiler

./: .clang-format  CMakeLists.txt  README.md
ir/: CMakeLists.txt  README.md  basicblock.cpp  basicblock.h  const.h  graph.cpp  graph.h  inst.cpp  inst.h  marker.h  utils.h
pass/: CMakeLists.txt  README.md  checks_elimination.cpp  checks_elimination.h  const_folding.cpp  const_folding.h  dce.cpp  dce.h  domtree.cpp  domtree.h  inline.cpp  inline.h  linear_order.cpp  linear_order.h  liveness.cpp  liveness.h  loop_analysis.cpp  loop_analysis.h  loop_analyzer.cpp  loop_analyzer.h  pass.h  passmanager.cpp  passmanager.h  peepholes.cpp  peepholes.h  reg_alloc.cpp  reg_alloc.h  rpo.cpp  rpo.h  visitor.h
tests/: CMakeLists.txt  checks_elimination_test.cpp  const_folding_test.cpp  domtree_test.cpp  inline_test.cpp  ir_test.cpp  linear_test.cpp  liveness_test.cpp  loop_analyzer_test.cpp  peepholes_test.cpp  reg_alloc_test.cpp  rpo_test.cpp
